# tcm-ba

./: .gitignore  README.md  debug_scrapy.py  pyproject.toml  scrapy.cfg
.github/workflows/: ci.yml
scripts/: check.py  create-table.sql
tcmba/: debug_scrapy.py  items.py  middlewares.py  pipelines.py  settings.py
tcmba/scripts/: check.py  download_tcmba_docs.py
tcmba/spiders/: consulta_publica.py  helpers.py  obras.py  processos.py  test_helpers.py
tcmba/tcmba/: middlewares.py  pipelines.py  settings.py
tcmba/tcmba/spiders/: consulta_publica.py
tcmba/tests/: test_helpers.py  test_spiders.py
