[tool.poetry]
name = "documentos-tcmba"
version = "0.1.0"
description = "Documentos da consulta pública do TCM-BA 📄"
authors = ["Dados Abertos de Feira <dadosabertosdefeira@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
flake8 = "^3.8.4"
pre-commit = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
